--- a/client/src/nav.css
+++ b/client/src/nav.css
@@ -4,6 +4,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
+    background-image: url(./img/Sky.jpg);
 }
 
 #nav, #cloud {
@@ -94,5 +95,4 @@ nav li {
 
 
 #cloud {
-    background-color: blue;
 }
